# DataStructure

./: .gitignore
c/: CMakeLists.txt
c/LinearList/: .gitignore  CMakeLists.txt  linked.c  main.c  sequential.c
c/Tree/: CMakeLists.txt  binary_tree.c
